samples/_failures_safe/1761788540_44c51e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be7ea740.c:168:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | struct Token peek
      |        ^~~~~
